--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -25,8 +25,10 @@ dist.dir=dist
 dist.ear.war=${dist.dir}/${war.ear.name}
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
+endorsed.classpath=
 excludes=
 file.reference.mysql-connector-java-8.0.11.jar=C:\\Users\\kevin\\OneDrive\\Escritorio\\jar_files\\mysql-connector-java-8.0.11.jar
+file.reference.mysql-connector-java-8.0.29.jar=..\\..\\mysql-connector-java-8.0.29\\mysql-connector-java-8.0.29\\mysql-connector-java-8.0.29.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -41,7 +43,8 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=pfv5ee8
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-8.0.11.jar}
+    ${file.reference.mysql-connector-java-8.0.11.jar}:\
+    ${file.reference.mysql-connector-java-8.0.29.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -68,7 +71,6 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
-no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 resource.dir=setup
