--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,8 +27,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 endorsed.classpath=
 excludes=
-file.reference.mysql-connector-java-8.0.11.jar=C:\\Users\\kevin\\OneDrive\\Escritorio\\jar_files\\mysql-connector-java-8.0.11.jar
-file.reference.mysql-connector-java-8.0.29.jar=..\\..\\mysql-connector-java-8.0.29\\mysql-connector-java-8.0.29\\mysql-connector-java-8.0.29.jar
+file.reference.mysql-connector-java-5.0.8-bin.jar=C:\\Users\\kevin\\Downloads\\mysql-connector-java-5.0.8\\mysql-connector-java-5.0.8\\mysql-connector-java-5.0.8-bin.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -43,8 +42,7 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=pfv5ee8
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-8.0.11.jar}:\
-    ${file.reference.mysql-connector-java-8.0.29.jar}
+    ${file.reference.mysql-connector-java-5.0.8-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
