terminé el diseño de bachillerato y botones

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,8 +27,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 endorsed.classpath=
 excludes=
-file.reference.mysql-connector-java-5.0.8-bin.jar=C:\\Users\\kevin\\Downloads\\mysql-connector-java-5.0.8\\mysql-connector-java-5.0.8\\mysql-connector-java-5.0.8-bin.jar
-file.reference.mysql-connector-java-5.0.8-bin.jar-1=..\\..\\mysql-connector-java-5.0.8\\mysql-connector-java-5.0.8-bin.jar
+file.reference.mysql-connector-java-5.0.8-bin.jar=C:\\Users\\MINEDUCYT\\Downloads\\mysql-connector-java-5.0.8\\mysql-connector-java-5.0.8-bin.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -43,7 +42,6 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=pfv5ee8
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-5.0.8-bin.jar-1}:\
     ${file.reference.mysql-connector-java-5.0.8-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
@@ -88,4 +86,4 @@ war.content.additional=
 war.ear.name=${war.name}
 war.name=TrabajoProgramacion.war
 web.docbase.dir=web
-webinf.dir=web/WEB-INF
+webinf.dir=build/web/WEB-INF
