--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -3,6 +3,7 @@ annotation.processing.enabled.in.editor=true
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+auxiliary.org-netbeans-modules-web-clientproject-api.js_2e_libs_2e_folder=js/libs
 build.classes.dir=${build.web.dir}/WEB-INF/classes
 build.classes.excludes=**/*.java,**/*.form
 build.dir=build
@@ -27,7 +28,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 endorsed.classpath=
 excludes=
-file.reference.mysql-connector-java-5.0.8-bin.jar=C:\\Users\\MINEDUCYT\\Downloads\\mysql-connector-java-5.0.8\\mysql-connector-java-5.0.8-bin.jar
+file.reference.mysql-connector-java-5.0.8-bin.jar-1=C:\\Users\\kevin\\Downloads\\mysql-connector-java-5.0.8\\mysql-connector-java-5.0.8\\mysql-connector-java-5.0.8-bin.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -42,7 +43,7 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=pfv5ee8
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-5.0.8-bin.jar}
+    ${file.reference.mysql-connector-java-5.0.8-bin.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
